@@ -38,6 +38,9 @@
 #ifndef SO_REUSEADDR
 #define SO_REUSEADDR (-1)
 #endif
+#ifndef SO_REUSEPORT
+#define SO_REUSEPORT (-1)
+#endif
 #ifndef SO_KEEPALIVE
 #define SO_KEEPALIVE (-1)
 #endif
@@ -109,6 +112,7 @@ static struct socket_option sockopt_bool[] = {
   { SOL_SOCKET, SO_DEBUG },
   { SOL_SOCKET, SO_BROADCAST },
   { SOL_SOCKET, SO_REUSEADDR },
+  { SOL_SOCKET, SO_REUSEPORT },
   { SOL_SOCKET, SO_KEEPALIVE },
   { SOL_SOCKET, SO_DONTROUTE },
   { SOL_SOCKET, SO_OOBINLINE },
